--- a/static/style.css
+++ b/static/style.css
@@ -4,31 +4,55 @@ html {
   justify-content: center;
   align-items: center;
   text-align: justify;
-  background-image: url("~/static/wallpaperMaybe.svg");
+  background-image: url("wallpaperMaybe.svg");
   background-attachment: fixed;
 
 }
 
 body{ 
+  
   width: 600px; 
   margin: 0 auto;
   font-size: 16px;
-  background-image: url("~/static/body.svg");  
+  background-image: url("body.svg");  
 }
 
 
 header {
-  background-image: url("~/static/header.png");
+  background-image: url("header.png");
   padding: 125px;
   
   
   color: white;
   
 }
+p {
+  text-indent: 40px;
+}
+
+blockquote {
+  background-image: url("blockquote.svg");
+  font-weight: 900;
+  border-left: 5px solid rgb(72, 0, 72)
+}
+
+
+code {
+  
+  width: 20%;
+  height: 20%;
+  background-image: url("code.svg");
+  color: #fff;
+  
+  color: #fff;
+  
+}
+
 
 
 footer {
   
+  background-image: url("footer.svg") ;
   color: white;
   text-align: center;
 }
