--- a/static/style.css
+++ b/static/style.css
@@ -13,8 +13,9 @@ body{
   
   width: 600px; 
   margin: 0 auto;
-  font-size: 16px;
-  background-image: url("body.svg");  
+  font-size: 14px;
+  background-image: url("body.svg");
+  font-family: Verdana, sans-serif;  
 }
 
 
@@ -23,8 +24,21 @@ header {
   padding: 125px;
   
   
-  color: white;
+  /* color: white; */
   
+}
+nav {
+  background-image: url("nav.svg");
+  overflow: hidden;
+}
+nav ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+nav li {
+  float: left;
 }
 p {
   text-indent: 40px;
@@ -34,6 +48,11 @@ blockquote {
   background-image: url("blockquote.svg");
   font-weight: 900;
   border-left: 5px solid rgb(72, 0, 72)
+}
+
+img {
+  max-width: 100%;
+  height: auto;
 }
 
 
