--- a/static/style.css
+++ b/static/style.css
@@ -31,9 +31,8 @@ nav {
   background-image: url("nav.svg");
   /* overflow: hidden; */
 }
-nav ul {
-  display: flex;
-  justify-content: space-between;
+nav ul li {
+  margin-right: 20px;
 }
 
 p {
