--- a/static/style.css
+++ b/static/style.css
@@ -29,12 +29,12 @@ header {
 }
 nav {
   background-image: url("nav.svg");
-  /* overflow: hidden; */
+  overflow: hidden;
 }
 nav ul {
-  display: flex;
-  justify-content: space-between;
-  margin-right: 20px;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 
 nav li {
