--- a/static/style.css
+++ b/static/style.css
@@ -27,6 +27,14 @@ header {
   /* color: white; */
   
 }
+.right-header {
+  float: right;
+  width: 30%;
+  background-color: #e0e0e0;
+  padding: 20px;
+}
+
+
 nav {
   background-image: url("nav.svg");
   overflow: hidden;
