--- a/static/style.css
+++ b/static/style.css
@@ -88,7 +88,14 @@ article p {
   font-size: 14px;
   margin: 0;
 }
-footer {
+.catalog {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin: 20px 0;
+}
+
+footer {  
   
   background-image: url("footer.svg") ;
   color: white;
