--- a/static/style.css
+++ b/static/style.css
@@ -74,7 +74,7 @@ code {
 
 article {
   text-align: center;
-  width: calc(33.33% -10px);
+  width: 30%;
   box-sizing: border-box;
 }
 article img {
@@ -93,7 +93,7 @@ article p {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  gap: 20px;
+  gap: 10px;
   margin: 0 auto;
   max-width: 800px;
 
