--- a/static/style.css
+++ b/static/style.css
@@ -104,6 +104,20 @@ article p {
 
 }
 
+aside {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 100px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  padding: 10px;
+}
+
 footer {  
   
   background-image: url("footer.svg") ;
