--- a/static/style.css
+++ b/static/style.css
@@ -15,7 +15,8 @@ body{
   margin: 0 auto;
   font-size: medium;
   background-image: url("body.svg");
-  font-family: Verdana, sans-serif;  
+  font-family: Verdana, sans-serif;
+  position: relative;
 }
 
 
@@ -103,20 +104,18 @@ article p {
   max-width: 800px;
 
 }
-
 aside {
-  position: fixed;
+  position: absolute;
   top: 0;
-  right: 0;
+  right: -100px;
   width: 100px;
-  height: 100%;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 20px;
-  padding: 10px;
 }
+
 
 footer {  
   
