--- a/static/style.css
+++ b/static/style.css
@@ -104,9 +104,26 @@ article p {
 
 }
 
+.sidebar {
+  position: fixed; 
+  top: 0;
+  right: 0;
+  height: 100vh; 
+  width: 200px; 
+  border-left: 2px solid #ccc; 
+  box-shadow: -2px 0 5px rgba(0, 0, 0, 0.1); 
+  display: flex; 
+  flex-direction: column; 
+  justify-content: start; 
+  padding: 10px;
+}
+ 
+
 footer {  
   
   background-image: url("footer.svg") ;
   color: white;
   text-align: center;
+  height: 100vh;
+  w
 }
