--- a/static/style.css
+++ b/static/style.css
@@ -16,6 +16,7 @@ body{
   font-size: medium;
   background-image: url("body.svg");
   font-family: Verdana, sans-serif;
+  margin-right: 200px;
 }
 
 
