--- a/static/style.css
+++ b/static/style.css
@@ -104,6 +104,17 @@ article p {
   max-width: 800px;
 
 }
+.links {
+  background-color: #ccc; /* Adjust the color as needed */
+  width: 200px; /* Adjust the width as needed */
+  height: 100%;
+  position: fixed;
+  right: 0;
+  top: 0;
+  border-left: 1px solid #ddd;
+  padding: 20px;
+}
+
 
 
 footer {  
