--- a/static/style.css
+++ b/static/style.css
@@ -105,15 +105,14 @@ article p {
 
 }
 .links {
-  background-color: #ccc; /* Adjust the color as needed */
-  width: 200px; /* Adjust the width as needed */
-  height: 100%;
-  position: fixed;
-  right: 0;
+  position: absolute;
   top: 0;
-  border-left: 1px solid #ddd;
+  right: 0;
+  bottom: 0;
+  width: 200px; 
+  background-color: #ccc; 
+  border-left: 1px solid #ddd; 
   padding: 20px;
-  float: right;
 }
 
 
