--- a/static/style.css
+++ b/static/style.css
@@ -105,14 +105,13 @@ article p {
 
 }
 .links {
-  position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  width: 200px; 
-  background-color: #ccc; 
-  border-left: 1px solid #ddd; 
+  min-width: 200px;
+  max-width: 400px;
+  width: 100%
+  background-color: #f4f4f4;
   padding: 20px;
+  box-sizing: border-box;
+  border: 1px solid #ddd;
 }
 
 
