--- a/static/style.css
+++ b/static/style.css
@@ -105,13 +105,18 @@ article p {
 
 }
 .links {
+  position: fixed;
+  top: 0;
+  right: 0;
   min-width: 200px;
   max-width: 400px;
   width: 100%
-  /*background-color: #f4f4f4;*/
+  background-color: #f4f4f4;
 padding: 20px;
   box-sizing: border-box;
-  border: 1px solid #ddd;
+  border-left: 2px solid #ddd;
+  height: 100%;
+  overflow-y: auto;
 }
 
 
