--- a/static/style.css
+++ b/static/style.css
@@ -8,6 +8,9 @@ html {
   background-attachment: fixed;
 
 }
+ul {
+  list-style-type: none;
+}
 
 body{ 
   
@@ -105,6 +108,9 @@ article p {
 
 }
 
+.links {
+  background: linear-gradient(to right, #333, #fff);
+}
 
 
 footer {  
