--- a/static/style.css
+++ b/static/style.css
@@ -113,6 +113,12 @@ article p {
 
 }
 
+.catalog article img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+
 .links {
   /*background-image: linear-gradient(355deg, rgba(255,255,255,1) 0%, rgba(255,254,254,1) 0%, rgba(255,255,255,1) 0%);*/
   background: linear-gradient(to bottom, #feccb1 0%,#f17432 50%,#ea5507 51%,#fb955e 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
